--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 <style>hcfy-result.__hcfy__result__loaded__.__hcfy__result__both__{border: 1px dotted}</style></head>
 <body>
 	<div class="content-wrapper">
-		<h1>三国百科使用条款和隐私政策</h1>
+		<h1>三国百科使用条款和免责声明</h1>
 		<p>三国百科应用尊重并保护所有使用本应用服务用户的个人隐私权。</p>
+        <br>
 		<p>请务必认真阅读和理解本《软件许可使用协议》(以下简称《协议》)中规定的所有权利和限制。除非您接受本《协议》条款否则您无权下载、安装或使用本”软件”及其相关服务。您一旦安装、复制、下载、访问或以其它方式使用本软件产品将视为对本《协议》的接受即表示您同意接受本《协议》各项条款的约束。如果您不同意本《协议》中的条款请不要安装、复制或使用本软件。</p>
 		<br>
 		<h3>1.权利声明</h3>
